@@ -14,10 +14,23 @@ jobs:
 
     strategy:
       matrix:
-        enterprise: ["1", ""]
+        include:
+          - name: "synergy"
+            remote_folder: "v1-core-standard"
+            enterprise: ""
+            business: ""
+          - name: "synergy-enterprise"
+            remote_folder: "v1-core-enterprise"
+            enterprise: "1"
+            business: ""
+          - name: "synergy-business"
+            remote_folder: "v1-core-business"
+            enterprise: ""
+            business: "1"
     env:
       GIT_COMMIT: ${{ github.sha }}
       SYNERGY_ENTERPRISE: ${{ matrix.enterprise }}
+      SYNERGY_BUSINESS: ${{ matrix.business }}
       CODESIGN_ID: "Developer ID Application: Symless Ltd (4HX897Y6GJ)"
 
     steps:
@@ -58,14 +71,8 @@ jobs:
           echo "::set-output name=SYNERGY_VERSION::$SYNERGY_VERSION"
           echo "::set-output name=SYNERGY_REVISION::$SYNERGY_REVISION"
           echo "::set-output name=SYNERGY_DMG_VERSION::$SYNERGY_DMG_VERSION"
-          if [ "$SYNERGY_ENTERPRISE" == '1' ]
-          then
-            SYNERGY_PACKAGE_NAME='synergy-enterprise'
-            SYNERGY_REMOTE_FOLDER="v1-core-enterprise/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
-          else
-            SYNERGY_PACKAGE_NAME='synergy'
-            SYNERGY_REMOTE_FOLDER="v1-core-standard/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
-          fi
+          SYNERGY_PACKAGE_NAME=${{ matrix.name }}
+          SYNERGY_REMOTE_FOLDER="${{ matrix.remote_folder }}/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
           SYNERGY_DMG_FILENAME="${SYNERGY_PACKAGE_NAME}_${SYNERGY_DMG_VERSION}_macos-arm64.dmg"
           echo "SYNERGY_REMOTE_FOLDER: $SYNERGY_REMOTE_FOLDER"
           echo "::set-output name=SYNERGY_REMOTE_FOLDER::$SYNERGY_REMOTE_FOLDER"
