@@ -2,6 +2,7 @@ v1.14.4-snapshot
 ===========
 Enhancements:
 - #7143 Add ability to stop synergy on the login screen
+- #7157 Synergy business accepts only business licenses
 
 Github Actions:
 - #7148 Fix unstable build for windows core
